<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.service.bus.activity.SignUp">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_firstname_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="@dimen/_20sdp"
                android:hint="@string/firstname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:lines="1"
                android:textColorHint="#3C3C3C" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_Lastname_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                android:drawablePadding="@dimen/_20sdp"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:lines="1"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_password_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="@dimen/_20sdp"
                android:hint="@string/password1"
                android:inputType="textPassword"
                android:maxLines="1"
                android:lines="1"/>


            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_confirmpassword_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="@dimen/_20sdp"
                android:hint="@string/confirm_password"
                android:lines="1"
                android:inputType="textPassword"
                android:maxLines="1" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_contactno_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:drawablePadding="@dimen/_20sdp"
                android:hint="@string/contact_number"
                android:inputType="number"
                android:maxLength="12"
                android:maxLines="1"
                android:lines="1"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_email_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:drawablePadding="@dimen/_20sdp"
                android:hint="@string/email"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:lines="1"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_gendet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_20sdp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textColor="@color/black" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textColor="@color/black" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_other"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other"
                    android:textColor="@color/black" />
            </RadioGroup>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_18sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/where_do_you_belong"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rd_User"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_signup"
                    android:textColor="@color/black" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_organization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/organization_signup"
                    android:textColor="@color/black" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_Admin_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/admin"
                    android:textColor="@color/black" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/rb_Depo_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/depo_department_signup"
                    android:textColor="@color/black" />
            </RadioGroup>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_20sdp"
                android:layout_weight="0.90"
                android:background="@drawable/button"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sdp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_back_to_login_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_13sdp"
                android:gravity="center"
                android:text="@string/back_to_login"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
